# driver-manager

./: CMakeLists.txt  downloadhelper.cpp  downloadhelper.h  driver.cpp  driver.h  driverlistmodel.cpp  driverlistmodel.h  drivermaster.cpp  drivermaster.h  main.cpp  resources.qrc  threadmanager.cpp  threadmanager.h
json/: drivers.json
qml/: DriverListPage.qml  LoadingText.qml  Main.qml  MainPage.qml  SimpleButton.qml  SimpleCheckBox.qml  SimpleMessageBox.qml  SimplePage.qml
